--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
+
+
 #?????????? ??????????? ? ???????, ????? ? ?????? ?????????? ?? ???????????? ???????
 #spring.web.resources.cache.cachecontrol.max-age=0
